--- a/styles/main.css
+++ b/styles/main.css
@@ -11,7 +11,7 @@ body {
     color: white;
     text-align: center;
     font-size: 24px;
-    line-height: 3;
+    line-height: 2;
 }
 header {
     border-style: inset;
@@ -23,8 +23,11 @@ header {
     
 }
 main {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     border-style:inset;
-    font-size: xx-large;
+    font-size: x-large;
     color:rgb(247, 238, 247);
     text-shadow:  rgb(147, 12, 138) 2px 2px;
     background-image: url(https://t4.ftcdn.net/jpg/01/13/63/63/360_F_113636383_PGTfoDy9DQp8ksHR79Jw1VwPGIrCQHQg.jpg);
@@ -43,29 +46,56 @@ footer {
 .container {
     display: flex;
     flex-direction: column;
+  
 }
-
-.fishInfo{
-    display: flex;
-    justify-content: center;
-
-}
-
-#fishGallery {
+.fishList{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    flex-direction: row;
-    width:75%;
-    height:auto;
-    list-style-type: none
 }
-li img{
-    width:75%;
+
+
+.fishcard{
+    
+    width:50%;
     height:auto;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 25px;
+    border-radius: 25px; 
 }
+
+.fish__image--card{
+    width:50%;
+    height:auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 25px; 
+    transition: transform .2s;
+    
+
+}
+
+.fish__image--card:hover{
+    transform: scale(1.5);
+}
+
+.right-sidebar:hover{
+    width: 50%;
+}
+main{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    min-width: 80%;
+    
+
+
+}
+/* div{
+    display: flex;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 25px;
+    flex-direction: column;
+    justify-content: center;
+} */
+
 a {
     text-shadow: rgb(21, 85, 249) 2px 2px ;
     color: white;
@@ -88,8 +118,8 @@ a:link {
     main {
         flex: 2;
         order: 2;
-        min-height: 135vh;
-        min-width: 150vh;
+    
+    
     }
     
     .left-sidebar {
